--- a/css/main.css
+++ b/css/main.css
@@ -2863,7 +2863,7 @@ table.dataTable.order-column.stripe tbody tr.odd > .sorting_1 {
 table.dataTable.display tbody tr.even > .sorting_1 {
   background-color: unset !important;
 }
-
+/*hiii*/
 .paginate_button {
   color: #333 !important;
   border: 1px solid #979797 !important;
