--- a/css/main.css
+++ b/css/main.css
@@ -2896,7 +2896,7 @@ div.dataTables_wrapper div.dataTables_filter input {
 
 .table-bg {
   background: #fff;
-  padding: 13px;
+  padding: 20px;
   margin-bottom: 18px;
   font-size: 13px;
   border-radius: 5px;
@@ -2909,11 +2909,12 @@ div.dataTables_wrapper div.dataTables_filter input {
 }
 
 .table-bg th strong {
-  color: #8a9097;
+  font-family: "Inter SemiBold" !important;
+  color: #3a3f4f !important;
 }
 
-.table-bg td {
-  color: #8a9097;
+.table-bg h4 {
+  margin-bottom: 20px;
 }
 
 .table-bg:nth-child(2) .sky-clr {
@@ -2930,7 +2931,7 @@ div.dataTables_wrapper div.dataTables_filter input {
 
 .table-bg .center-btn {
   text-align: center;
-  margin-bottom: 16px;
+  margin-top: 16px;
 }
 
 .site-page .site-bg {
@@ -3466,7 +3467,7 @@ div.dataTables_wrapper {
   font-family: "Inter Regular" !important;
 }
 
-table.dataTable thead > tr > th.sorting {
+table.dataTable thead > tr > th p {
   font-family: "Inter SemiBold" !important;
   color: #3a3f4f !important;
 }
@@ -3479,4 +3480,223 @@ table.dataTable.display tbody tr:hover {
 .paginate_button:hover {
   color: #009efb !important;
   border: 1px solid #009efb !important;
+}
+
+/* invoice */
+
+.invoice_outer {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.invoice_outer .shipTop {
+  display: flex;
+  /* border-bottom: 1px solid #ddd; */
+  background: #ab6b35;
+  /* margin: -20px -20px 0px; */
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.invoice_outer .shipTop h3 {
+  flex: 1;
+  color: #fff;
+  margin-bottom: 0px;
+  align-self: center;
+}
+
+.invoice_outer .shipInfo {
+  padding: 20px 0px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.invoice_outer .lftShip {
+  width: 50%;
+  padding-right: 10px;
+}
+
+.invoice_outer .innerShip {
+  background: #fff;
+  padding: 10px;
+  overflow: hidden;
+  border-radius: 4px;
+  /* box-shadow: 2px 0 26px rgba(215, 222, 227, 0.4); */
+  border: 1px solid #dddddd47;
+  height: 100%;
+}
+
+.invoice_outer .innerShip h4 {
+  font-size: 18px;
+}
+
+.invoice_outer .innerViewOrdList ul li {
+  display: block;
+  color: #333;
+  padding: 5px 0px;
+  /* font-size: 14px; */
+  opacity: 0.8;
+}
+
+.invoice_outer .innerViewOrdList ul li i {
+  font-size: 16px;
+  height: 20px;
+  padding-top: 3px;
+  margin-right: 6px;
+}
+
+.invoice_outer .rgtShip {
+  width: 50%;
+  padding-left: 10px;
+}
+
+.invoice_outer .checkList {
+  border-bottom: 1px solid #eee;
+}
+
+.invoice_outer .checkList > li._head {
+  padding: 10px 0px;
+  font-size: 15px;
+}
+.invoice_outer .checkList > li {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 20px 0px;
+  border: 1px solid #eee;
+  border-bottom: transparent;
+  margin-bottom: 0px;
+  background: white;
+  text-align: center;
+}
+
+.invoice_outer .checkList > li .ser_no {
+  width: 10%;
+  text-align: left;
+}
+
+.invoice_outer .checkList > li .pro_cart {
+  width: 40%;
+  color: #333;
+}
+.invoice_outer .checkList > li .pro_cart {
+  text-align: left;
+  display: flex;
+}
+.invoice_outer .checkList > li > div {
+  padding: 0px 10px;
+}
+.invoice_outer .checkList > li .qty_cart {
+  width: 20%;
+  color: #333;
+}
+
+.invoice_outer .checkList > li .qty_cart h4 {
+  margin-bottom: 0;
+}
+
+.invoice_outer .checkList > li .price_cart {
+  width: 20%;
+  color: #333;
+}
+
+.invoice_outer .checkList > li .price_total {
+  width: 10%;
+  text-align: right;
+  color: #333;
+}
+.invoice_outer .checkList > li .pro_cart .ico {
+  width: 70px;
+  height: 70px;
+  margin-right: 15px;
+  min-width: 70px;
+  min-height: 70px;
+  border: 1px solid #eee;
+  border-radius: 0px;
+}
+
+.invoice_outer .checkList > li .pro_cart .ico a {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.invoice_outer .checkList > li .pro_cart .ico img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.invoice_outer .checkList > li .pro_cart h4 {
+  font-size: 16px;
+}
+
+.invoice_outer .checkList ._head h4 {
+  margin-bottom: 0px !important;
+}
+
+.invoice_outer .checkList > li .price_cart .price {
+  font-size: 16px;
+  margin-bottom: -3px;
+}
+
+.invoice_outer .orderTable {
+  margin-bottom: 0px;
+}
+
+.invoice_outer .orderTable {
+  /* background: #f9f5f1; */
+  margin: 15px 0px 15px;
+}
+
+.invoice_outer .orderTable table {
+  width: 100%;
+}
+
+.invoice_outer .orderTable table tr td:nth-child(1) {
+  width: 65%;
+  font-size: 15px;
+}
+.invoice_outer .orderTable table tr td {
+  padding: 10px 10px 8px;
+  border: 1px solid #eee;
+  color: #333;
+}
+
+.invoice_outer .orderTable table tr td:nth-child(2) {
+  width: 35%;
+  font-size: 15px;
+  text-align: right;
+}
+
+.invoice_logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.in_logo {
+  width: 156px;
+}
+
+.in_logo img {
+  object-fit: cover;
+}
+
+.inv_info ul li:not(:last-child) {
+  margin-right: 40px;
+}
+
+.invoice_outer .in_btn {
+  margin-top: 30px;
+  justify-content: flex-end;
+}
+
+.invoice_outer .pro_name h4 {
+  margin-bottom: 10px !important;
 }
