--- a/css/main.css
+++ b/css/main.css
@@ -252,7 +252,7 @@ p:nth-last-child(1) {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  min-width: 141px;
+  /* min-width: 141px; */
   height: 45px;
   background: #009efb;
   background-position: 100% 0;
